--- a/Урок 1. Веб-технологии вчера сегодня завтра.md
+++ b/Урок 1. Веб-технологии вчера сегодня завтра.md
@@ -25,8 +25,8 @@ IP диапазон:        95.213.199.0 - 95.213.199.255
 
 
 ### Внесите не менее 3 изменений на страницу с помощью инструмента разработчика и представьте скриншоты было/стало.
-Было   
-Стало   
+Было  ![Было](https://raw.githubusercontent.com/Pavel-Pokalnetov/Web-technology/master/before.png)
+Стало   ![Стало](https://raw.githubusercontent.com/Pavel-Pokalnetov/Web-technology/master/after.png)
 
 
 
