--- a/Урок 1. Веб-технологии вчера сегодня завтра.md
+++ b/Урок 1. Веб-технологии вчера сегодня завтра.md
@@ -20,7 +20,7 @@ IP диапазон:        95.213.199.0 - 95.213.199.255
 Название провайдера:        SELECTEL-NET  
 
 ### Проанализируйте структуру страницы сайта. Покажите в коде где хедер, футер и контент. Очень схематично:  
-  
+  ![Структура и комментариями](https://raw.githubusercontent.com/Pavel-Pokalnetov/Web-technology/master/структура%20сайта.png)
 
 
 
