--- a/Урок 1. Веб-технологии вчера сегодня завтра.md
+++ b/Урок 1. Веб-технологии вчера сегодня завтра.md
@@ -32,8 +32,5 @@ IP диапазон:        95.213.199.0 - 95.213.199.255
 Стало   ![Стало](https://raw.githubusercontent.com/Pavel-Pokalnetov/Web-technology/master/after.png)
 
 
-
-
-
 ### Создайте прототип низкой детализации.
-
+![Прототип сайта](https://raw.githubusercontent.com/Pavel-Pokalnetov/Web-technology/master/LowPrototype.png)
