--- a/Урок 1. Веб-технологии вчера сегодня завтра.md
+++ b/Урок 1. Веб-технологии вчера сегодня завтра.md
@@ -22,7 +22,8 @@ IP диапазон:        95.213.199.0 - 95.213.199.255
 ```
 
 
-### Проанализируйте структуру страницы сайта. Покажите в коде где хедер, футер и контент. Очень схематично:  
+### Проанализируйте структуру страницы сайта. Покажите в коде где хедер, футер и контент.  
+Очень схематично:  
   ![Структура и комментариями](https://raw.githubusercontent.com/Pavel-Pokalnetov/Web-technology/master/структура%20сайта.png)
 
 
