--- a/Урок 1. Веб-технологии вчера сегодня завтра.md
+++ b/Урок 1. Веб-технологии вчера сегодня завтра.md
@@ -23,7 +23,7 @@ IP диапазон:        95.213.199.0 - 95.213.199.255
 
 
 ### Проанализируйте структуру страницы сайта. Покажите в коде где хедер, футер и контент.  
-Очень схематично:  
+Очень схематично (отбрасывая контент стили, классы и идентификаторы, прочие элементы разметки):  
   ![Структура и комментариями](https://raw.githubusercontent.com/Pavel-Pokalnetov/Web-technology/master/структура%20сайта.png)
 
 
